update resume to be easier to read by machines

--- a/index.html
+++ b/index.html
@@ -47,49 +47,12 @@
                 <div class="grid justify-items-end">
                     <h1 class="text-4xl font-extrabold">Dalton DeMaria</h1>
                     <p class="text-xl text-slate-500">Full-Stack Staff Software Engineer</p>
+                    <p class="text-md text-slate-200">ddemaria.career@gmail.com</p>
                 </div>
             </div>
         </header>
-        <!-- detailed info -->
-        <main class="flex flex-col md:flex-row gap-x-5">
-            <div class="w-full md:w-2/6 py-5">
-                <strong class="text-xl font-medium">Contact Details</strong>
-                <ul class="mt-2 mb-10">
-                    <li class="px-2 mt-1"><strong class="mr-1">E-mail </strong>
-                        <a href="mailto:" class="block">ddemaria.career@gmail.com</a>
-                    </li>
-                    <li class="px-2 mt-1"><strong class="mr-1">Location</strong><span class="block">
-                            Missouri, US</span></li>
-                </ul>
-
-                <strong class="text-xl font-medium">Skills</strong>
-                <ul class="mt-2 mb-10">
-                    <li class="px-2 mt-1">C#/.Net</li>
-                    <li class="px-2 mt-1">Java</li>
-                    <li class="px-2 mt-1">Python</li>
-                    <li class="px-2 mt-1">Cloud Computing</li>
-                    <li class="px-2 mt-1">SQL & Postgres</li>
-                    <li class="px-2 mt-1">NoSQL</li>
-                    <li class="px-2 mt-1">React</li>
-                    <li class="px-2 mt-1">Node.js</li>
-                    <li class="px-2 mt-1">Swift (iOS)</li>
-
-                </ul>
-                <strong class="text-xl font-medium">Currently learning</strong>
-                <ul class="mt-2 mb-10">
-                    <li class="px-2 mt-1">ML/Data Engineering</li>
-                    <li class="px-2 mt-1">OCR</li>
-                </ul>
-                <strong class="text-xl font-medium">Interests & Hobbies</strong>
-                <ul class="mt-2">
-                    <li class="px-2 mt-1">ML/AI</li>
-                    <li class="px-2 mt-1">Chess</li>
-                    <li class="px-2 mt-1">Weightlifting</li>
-                    <li class="px-2 mt-1">Nvidia Omniverse</li>
-                    <li class="px-2 mt-1">IoT</li>
-                </ul>
-            </div>
-            <div class="w-full flex flex-col md:w-4/6 py-10">
+        <main class="flex flex-row w-full justify-center">
+            <div class="w-full flex flex-col py-10 px-25">
                 <section>
                     <h2 class="text-2xl pb-1 border-b font-semibold">About</h2>
                     <p class="mt-4 text-xs">
@@ -105,74 +68,6 @@
 
                 </section>
                 <section>
-                    <h2 class="text-2xl mt-6 pb-1 border-b font-semibold">Projects</h2>
-                    <ul class="mt-1">
-                        <li class="py-2">
-                            <div class="flex justify-between my-1">
-                                <strong>YourKhora</strong>
-                                <p class="flex">
-                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">C#</span>
-                                    <span
-                                        class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Typescript</span>
-                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">React</span>
-                                </p>
-                            </div>
-                            <p class="text-xs">
-                                YourKhora was created to provide remote workers the flexibility to choose comfortable,
-                                nearby office spaces while allowing downtown real-estate owners to profit from their
-                                unused space. The platform featured a C# backend and a ReactJS TypeScript frontend,
-                                delivering a seamless booking experience. It was containerized and deployed on AWS,
-                                utilizing ECS for scalable backend services and CloudFront CDN for cost-efficient
-                                frontend distribution. PostgreSQL ensured reliable data storage, while Terraform IaC
-                                automated infrastructure provisioning. YourKhora enabled a flexible, cost-effective
-                                solution for both workers seeking productive, outside-of-home spaces and owners looking
-                                to maximize revenue.
-                            </p>
-                        </li>
-                        <li class="py-2">
-                            <div class="flex justify-between my-1">
-                                <strong>Word Search Solver</strong>
-                                <p class="flex">
-                                    <span
-                                        class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Python</span>
-                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">React</span>
-                                </p>
-                            </div>
-                            <p class="text-xs">Word Search Solver – AI-Powered Puzzle Solving
-                                Word Search Solver is an AI-driven solution designed to instantly solve word search
-                                puzzles from a simple photo. Using PyTesseract OCR and a machine learning model trained
-                                with supervised learning, the system detects the puzzle within an image, extracts the
-                                word list, and highlights the solutions directly on the original image. The backend
-                                processes image recognition and word detection, while the frontend delivers a smooth and
-                                intuitive user experience. This project combines computer vision, machine learning, and
-                                real-time processing to create a seamless, interactive puzzle-solving tool.
-                            </p>
-                        </li>
-                        <li class="py-2">
-                            <div class="flex justify-between my-1">
-                                <strong>SimulIDE</strong>
-                                <p class="flex">
-                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Java</span>
-                                    <span
-                                        class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Kotlin</span>
-                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">HTMx</span>
-                                </p>
-                            </div>
-                            <p class="text-xs">
-                                SimulIDE is a collaborative code editing tool I developed to facilitate seamless
-                                technical interviews by enabling test-driven development sessions between multiple
-                                users. Utilizing Kotlin, Java, Terraform, and HTMx, I designed and implemented the
-                                entire project, ensuring real-time updates with web sockets and automatic unit test
-                                execution upon file save. The primary challenge of handling collaboration conflicts was
-                                resolved by adopting operational transformation, replacing the initial git-style
-                                merge-conflict resolution. This project enhanced my skills in real-time updates and
-                                scalable infrastructure deployment, revolutionizing the technical interview process by
-                                providing a user-friendly and efficient platform.
-                            </p>
-                        </li>
-                    </ul>
-                </section>
-                <section>
                     <h2 class="text-2xl mt-6 pb-1 border-b font-semibold">Work Experience</h2>
                     <ul class="mt-2">
                         <li class="pt-2">
@@ -180,6 +75,16 @@
                                 Present</p>
                             <p class="flex flex-col md:flex-row md:justify-between text-base">
                                 Senior Developer/Consultant
+                                <small class="font-semibold text-slate-500 mt-3 md:mt-0">
+                                    CareMetx</small>
+                            </p>
+                            <p class="text-justify text-xs">
+                                Advise/design event-driven architecture to make cost-effective use of AWS services that
+                                meet the client needs. Facilitate collaboration across multiple teams to address urgent outages.
+                                Advocate for Microsoft best practices in the .NET ecosystem. Design test automation to reduce manual testing
+                                and improve developer productivity.
+                            </p>
+                            <p class="flex flex-col md:flex-row md:justify-end text-base">
                                 <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                     Southwest
                                     Airlines</small>
@@ -306,6 +211,74 @@
                                 streamline the creation of similar SPAs, tripling ticket throughput. Developed an RSS
                                 feed monitor for JIRA board events, providing accurate metrics without human
                                 intervention.
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2 class="text-2xl mt-6 pb-1 border-b font-semibold">Projects</h2>
+                    <ul class="mt-1">
+                        <li class="py-2">
+                            <div class="flex justify-between my-1">
+                                <strong>YourKhora</strong>
+                                <p class="flex">
+                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">C#</span>
+                                    <span
+                                            class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Typescript</span>
+                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">React</span>
+                                </p>
+                            </div>
+                            <p class="text-xs">
+                                YourKhora was created to provide remote workers the flexibility to choose comfortable,
+                                nearby office spaces while allowing downtown real-estate owners to profit from their
+                                unused space. The platform featured a C# backend and a ReactJS TypeScript frontend,
+                                delivering a seamless booking experience. It was containerized and deployed on AWS,
+                                utilizing ECS for scalable backend services and CloudFront CDN for cost-efficient
+                                frontend distribution. PostgreSQL ensured reliable data storage, while Terraform IaC
+                                automated infrastructure provisioning. YourKhora enabled a flexible, cost-effective
+                                solution for both workers seeking productive, outside-of-home spaces and owners looking
+                                to maximize revenue.
+                            </p>
+                        </li>
+                        <li class="py-2">
+                            <div class="flex justify-between my-1">
+                                <strong>Word Search Solver</strong>
+                                <p class="flex">
+                                    <span
+                                            class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Python</span>
+                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">React</span>
+                                </p>
+                            </div>
+                            <p class="text-xs">Word Search Solver – AI-Powered Puzzle Solving
+                                Word Search Solver is an AI-driven solution designed to instantly solve word search
+                                puzzles from a simple photo. Using PyTesseract OCR and a machine learning model trained
+                                with supervised learning, the system detects the puzzle within an image, extracts the
+                                word list, and highlights the solutions directly on the original image. The backend
+                                processes image recognition and word detection, while the frontend delivers a smooth and
+                                intuitive user experience. This project combines computer vision, machine learning, and
+                                real-time processing to create a seamless, interactive puzzle-solving tool.
+                            </p>
+                        </li>
+                        <li class="py-2">
+                            <div class="flex justify-between my-1">
+                                <strong>SimulIDE</strong>
+                                <p class="flex">
+                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Java</span>
+                                    <span
+                                            class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">Kotlin</span>
+                                    <span class="bg-gray-600 text-white px-2 py-1 ml-1 text-xs rounded h-6">HTMx</span>
+                                </p>
+                            </div>
+                            <p class="text-xs">
+                                SimulIDE is a collaborative code editing tool I developed to facilitate seamless
+                                technical interviews by enabling test-driven development sessions between multiple
+                                users. Utilizing Kotlin, Java, Terraform, and HTMx, I designed and implemented the
+                                entire project, ensuring real-time updates with web sockets and automatic unit test
+                                execution upon file save. The primary challenge of handling collaboration conflicts was
+                                resolved by adopting operational transformation, replacing the initial git-style
+                                merge-conflict resolution. This project enhanced my skills in real-time updates and
+                                scalable infrastructure deployment, revolutionizing the technical interview process by
+                                providing a user-friendly and efficient platform.
                             </p>
                         </li>
                     </ul>
