--- a/index.html
+++ b/index.html
@@ -3,102 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dalton DeMaria - ATS Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Dalton DeMaria — Resume</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
-<body class="bg-gray-50 text-gray-900 font-sans">
-<div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg p-8 mt-10">
+<body class="bg-gray-50 text-gray-900 font-serif">
+<main class="max-w-3xl mx-auto bg-white p-10 mt-10 border border-gray-200 shadow-sm">
     <!-- Header -->
-    <header class="text-center mb-6">
-        <h1 class="text-3xl font-bold">Dalton DeMaria</h1>
-        <p class="text-lg text-gray-600">Senior Full Stack AI Engineer</p>
-        <p class="text-sm">Email: <a href="mailto:ddemaria.career@gmail.com" class="text-blue-600">ddemaria.career@gmail.com</a></p>
-        <p class="text-sm">LinkedIn: <a href="https://www.linkedin.com/in/dalton-demaria-366a933a" class="text-blue-600">linkedin.com/in/dalton-demaria</a></p>
-        <p class="text-sm">GitHub: <a href="https://github.com/a-random-detail" class="text-blue-600">github.com/a-random-detail</a></p>
+    <header class="text-center border-b border-gray-300 pb-4 mb-6">
+        <h1 class="text-3xl font-bold tracking-wide">Dalton DeMaria</h1>
+        <p class="text-gray-700 text-sm">Senior Full Stack AI Engineer</p>
+        <p class="mt-2 text-xs text-gray-600">
+            <a href="mailto:ddemaria.career@gmail.com" class="hover:underline">ddemaria.career@gmail.com</a> •
+            <a href="https://www.linkedin.com/in/dalton-demaria-366a933a" class="hover:underline">linkedin.com/in/dalton-demaria</a> •
+            <a href="https://github.com/a-random-detail" class="hover:underline">github.com/a-random-detail</a>
+        </p>
     </header>
 
     <!-- Summary -->
     <section class="mb-6">
-        <h2 class="text-xl font-semibold border-b pb-1">Summary</h2>
-        <p class="mt-2 text-sm">
-            Results-driven engineer specializing in AI-driven platforms, multi-agent workflows, and scalable cloud-native systems. Proven track record of rapid prototyping and deploying production-ready AI tools, improving developer productivity by 100% and enabling business model refinement at scale. Experienced leader, mentor, and builder with expertise in AWS, OpenAI, Claude, LLM fine-tuning, and vector databases.
+        <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Summary</h2>
+        <p class="mt-2 text-sm leading-relaxed">
+            Results-driven engineer with expertise in <strong>LLM APIs</strong>,
+            <strong>multi-agent workflows</strong>, and
+            <strong>retrieval-augmented generation (RAG)</strong> pipelines. Skilled
+            in designing secure, scalable <strong>AWS</strong> and <strong>Azure</strong>
+            solutions for production AI systems. Experienced in custom
+            <strong>LLM fine-tuning</strong>, <strong>vector search</strong>
+            integration, and rapid prototyping to improve developer productivity by
+            <strong>100%</strong> and reduce business model preparation time by
+            <strong>80%+</strong>. Focused on compliance, privacy, and cross-functional
+            leadership to deliver impactful AI solutions.
         </p>
     </section>
 
     <!-- Work Experience -->
     <section class="mb-6">
-        <h2 class="text-xl font-semibold border-b pb-1">Work Experience</h2>
+        <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Experience</h2>
 
         <!-- Codefi -->
         <div class="mt-4">
-            <h3 class="font-bold">Codefi <span class="font-normal">| Senior Full Stack AI Engineer</span></h3>
-            <p class="text-sm text-gray-600">June 2025 – Present</p>
-            <ul class="list-disc list-inside text-sm mt-2 space-y-1">
-                <li>Architected and deployed <strong>Traction Studio AI</strong>, a multi-agent AI platform leveraging OpenAI, Claude, and vector databases, reducing business model preparation from 120 days to 2 weeks.</li>
-                <li>Designed <strong>custom fine-tuned LLMs</strong> and vector search pipelines for context-aware, intelligent assistants.</li>
-                <li>Enabled 21 businesses (15 production, 6 prototype) to refine models, reducing abandoned ideas by 33%.</li>
-                <li>Built developer tools integrating Claude and GitHub Copilot, doubling engineering throughput.</li>
-                <li>Mentored 2 junior developers, taking a greenfield product to closed beta launch in 7 weeks.</li>
-                <li>Implemented secure, compliant AWS-based infrastructure for sensitive business and investor data.</li>
+            <div class="flex justify-between text-sm">
+                <span class="font-bold">Codefi</span>
+                <span class="italic">June 2025 – Present</span>
+            </div>
+            <p class="text-sm text-gray-700">Senior Full Stack AI Engineer</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Architected and deployed <strong>Traction Studio AI</strong>, reducing time-to-pitch from 120 days to 2 weeks.</li>
+                <li>Developed custom <strong>LLM fine-tuning</strong> and <strong>RAG pipelines</strong> with vector search for intelligent assistants.</li>
+                <li>Onboarded 21 businesses (15 production, 6 prototype), cutting abandoned ideas by <strong>33%</strong>.</li>
+                <li>Integrated Claude and GitHub Copilot to automate workflows, doubling developer throughput.</li>
+                <li>Mentored 2 junior developers, delivering a greenfield product to closed beta in 7 weeks.</li>
+                <li>Built secure, compliant <strong>AWS</strong> infrastructure for sensitive investor data.</li>
             </ul>
         </div>
 
         <!-- CGI -->
-        <div class="mt-6">
-            <h3 class="font-bold">CGI (formerly Daugherty Business Solutions) <span class="font-normal">| Senior Developer / Consultant</span></h3>
-            <p class="text-sm text-gray-600">Sept 2023 – June 2025</p>
+        <div class="mt-5">
+            <div class="flex justify-between text-sm">
+                <span class="font-bold">CGI (formerly Daugherty Business Solutions)</span>
+                <span class="italic">Sept 2023 – June 2025</span>
+            </div>
+            <p class="text-sm text-gray-700">Senior Developer / Consultant</p>
 
-            <h4 class="italic mt-2">Southwest Airlines – Scheduling System Overhaul</h4>
-            <ul class="list-disc list-inside text-sm mt-1 space-y-1">
-                <li>Led company-wide scheduling system modernization impacting all flights and crew members.</li>
-                <li>Improved schedule adherence from 70% to over 85%, exceeding corporate goals.</li>
-                <li>Integrated AI workflows using Amazon Q and GitHub Copilot to streamline scheduling and reduce downtime.</li>
-                <li>Built scalable, secure AWS infrastructure for sensitive operational and personnel data.</li>
+            <p class="mt-2 text-xs font-semibold">Southwest Airlines – Scheduling System Overhaul</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Led modernization of scheduling for all flights and crew members nationwide.</li>
+                <li>Improved adherence from <strong>70%</strong> to <strong>85%+</strong>, surpassing goals.</li>
+                <li>Implemented AI workflows with Amazon Q and Copilot to reduce downtime.</li>
+                <li>Designed secure AWS architecture with compliance controls for sensitive data.</li>
             </ul>
 
-            <h4 class="italic mt-3">CareMetx – Event-Driven Architecture</h4>
-            <ul class="list-disc list-inside text-sm mt-1 space-y-1">
-                <li>Designed event-driven AWS architecture to reduce costs and improve service reliability.</li>
-                <li>Developed CI/CD pipelines and testing automation to increase deployment speed and reduce bugs.</li>
-                <li>Advocated for .NET best practices and modern SDLC improvements.</li>
-            </ul>
-        </div>
-
-        <!-- 7Factor Software -->
-        <div class="mt-6">
-            <h3 class="font-bold">7Factor Software <span class="font-normal">| Team Lead / Architect</span></h3>
-            <p class="text-sm text-gray-600">July 2022 – Sept 2023</p>
-            <ul class="list-disc list-inside text-sm mt-2 space-y-1">
-                <li>Led 8-member team across mobile and API development, fostering collaboration and innovation.</li>
-                <li>Built microservices infrastructure in AWS with Terraform and Concourse/Vault CI/CD.</li>
-                <li>Cut costs by implementing AWS Cognito, eliminating third-party user management.</li>
-                <li>Mentored developers to increase productivity and quality delivery.</li>
+            <p class="mt-2 text-xs font-semibold">CareMetx – Event-Driven Architecture</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Built AWS and Azure event-driven architecture to optimize cost and reliability.</li>
+                <li>Created CI/CD pipelines and testing automation for faster, safer releases.</li>
+                <li>Standardized SDLC with secure API design and .NET best practices.</li>
             </ul>
         </div>
 
-        <!-- World Wide Technology -->
-        <div class="mt-6">
-            <h3 class="font-bold">World Wide Technology <span class="font-normal">| Senior Software Engineer</span></h3>
-            <p class="text-sm text-gray-600">July 2015 – July 2022</p>
-            <ul class="list-disc list-inside text-sm mt-2 space-y-1">
-                <li>Developed microservices for internal and external transfer flows for financial institutions.</li>
-                <li>Built CI/CD pipelines using Jenkins for Azure and AWS deployments.</li>
-                <li>Designed data flow diagrams to improve architecture clarity and onboarding.</li>
+        <!-- 7Factor -->
+        <div class="mt-5">
+            <div class="flex justify-between text-sm">
+                <span class="font-bold">7Factor Software</span>
+                <span class="italic">July 2022 – Sept 2023</span>
+            </div>
+            <p class="text-sm text-gray-700">Team Lead / Architect</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Led 8-member team delivering cloud-based mobile and API solutions.</li>
+                <li>Designed AWS microservices with Terraform and advanced CI/CD.</li>
+                <li>Reduced costs by leveraging AWS Cognito for identity management.</li>
+                <li>Mentored developers to boost team output and quality.</li>
+            </ul>
+        </div>
+
+        <!-- WWT -->
+        <div class="mt-5">
+            <div class="flex justify-between text-sm">
+                <span class="font-bold">World Wide Technology</span>
+                <span class="italic">July 2015 – July 2022</span>
+            </div>
+            <p class="text-sm text-gray-700">Senior Software Engineer</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Developed high-volume financial microservices for internal and external transfers.</li>
+                <li>Created CI/CD pipelines for AWS and Azure to streamline releases.</li>
+                <li>Produced architecture diagrams for faster onboarding and clarity.</li>
             </ul>
         </div>
     </section>
 
     <!-- Education -->
-    <section class="mb-6">
-        <h2 class="text-xl font-semibold border-b pb-1">Education</h2>
-        <p class="text-sm mt-2">Missouri State University — B.S. Computer Science, 2011</p>
+    <section class="mb-4">
+        <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Education</h2>
+        <p class="mt-2 text-sm">Missouri State University — B.S. Computer Science, 2011</p>
     </section>
 
     <!-- Certifications -->
     <section>
-        <h2 class="text-xl font-semibold border-b pb-1">Certifications</h2>
-        <p class="text-sm mt-2">AWS Certified Solutions Architect</p>
+        <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Certifications</h2>
+        <p class="mt-2 text-sm">AWS Certified Solutions Architect</p>
     </section>
-</div>
+</main>
 </body>
 </html>
