000 - one more improvement

--- a/index.html
+++ b/index.html
@@ -23,16 +23,7 @@
     <section class="mb-6">
         <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Summary</h2>
         <p class="mt-2 text-sm leading-relaxed">
-            Results-driven engineer with expertise in <strong>LLM APIs</strong>,
-            <strong>multi-agent workflows</strong>, and
-            <strong>retrieval-augmented generation (RAG)</strong> pipelines. Skilled
-            in designing secure, scalable <strong>AWS</strong> and <strong>Azure</strong>
-            solutions for production AI systems. Experienced in custom
-            <strong>LLM fine-tuning</strong>, <strong>vector search</strong>
-            integration, and rapid prototyping to improve developer productivity by
-            <strong>100%</strong> and reduce business model preparation time by
-            <strong>80%+</strong>. Focused on compliance, privacy, and cross-functional
-            leadership to deliver impactful AI solutions.
+            Full-stack engineer with deep expertise in <strong>AI-driven platforms</strong>, <strong>LLM fine-tuning</strong>, and <strong>retrieval-augmented generation (RAG)</strong>. Proven record of delivering production AI systems that improve developer productivity by <strong>100%</strong> and cut business preparation time by <strong>80%+</strong>. Strong leader and mentor focused on privacy, compliance, and secure, scalable <strong>AWS</strong> and <strong>Azure</strong> architectures. Passionate about building impactful products with measurable business outcomes.
         </p>
     </section>
 
@@ -48,12 +39,12 @@
             </div>
             <p class="text-sm text-gray-700">Senior Full Stack AI Engineer</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Architected and deployed <strong>Traction Studio AI</strong>, reducing time-to-pitch from 120 days to 2 weeks.</li>
-                <li>Developed custom <strong>LLM fine-tuning</strong> and <strong>RAG pipelines</strong> with vector search for intelligent assistants.</li>
-                <li>Onboarded 21 businesses (15 production, 6 prototype), cutting abandoned ideas by <strong>33%</strong>.</li>
-                <li>Integrated Claude and GitHub Copilot to automate workflows, doubling developer throughput.</li>
-                <li>Mentored 2 junior developers, delivering a greenfield product to closed beta in 7 weeks.</li>
-                <li>Built secure, compliant <strong>AWS</strong> infrastructure for sensitive investor data.</li>
+                <li>Built <strong>Traction Studio AI</strong>, a multi-agent platform that cut business model prep time from 120 days to 2 weeks, adopted by 21 companies.</li>
+                <li>Developed custom <strong>LLM fine-tuning</strong> and <strong>RAG pipelines</strong> with vector search to deliver context-aware guidance.</li>
+                <li>Reduced abandoned startup ideas by <strong>33%</strong> through AI-driven business planning workflows.</li>
+                <li>Integrated Claude and GitHub Copilot to automate engineering tasks, doubling developer throughput.</li>
+                <li>Mentored 2 junior engineers, leading a greenfield product to beta launch in 7 weeks.</li>
+                <li>Implemented secure, compliant AWS infrastructure to protect sensitive data and IP.</li>
             </ul>
         </div>
 
@@ -67,16 +58,16 @@
 
             <p class="mt-2 text-xs font-semibold">Southwest Airlines – Scheduling System Overhaul</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Led modernization of scheduling for all flights and crew members nationwide.</li>
-                <li>Improved adherence from <strong>70%</strong> to <strong>85%+</strong>, surpassing goals.</li>
-                <li>Implemented AI workflows with Amazon Q and Copilot to reduce downtime.</li>
-                <li>Designed secure AWS architecture with compliance controls for sensitive data.</li>
+                <li>Modernized nationwide scheduling for all flights and crew members.</li>
+                <li>Raised schedule adherence from <strong>70%</strong> to <strong>85%+</strong>, surpassing company targets.</li>
+                <li>Built AI-powered workflows using Amazon Q and Copilot to reduce downtime.</li>
+                <li>Designed a secure, scalable AWS architecture for sensitive operational data.</li>
             </ul>
 
             <p class="mt-2 text-xs font-semibold">CareMetx – Event-Driven Architecture</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Built AWS and Azure event-driven architecture to optimize cost and reliability.</li>
-                <li>Created CI/CD pipelines and testing automation for faster, safer releases.</li>
+                <li>Created AWS and Azure event-driven architecture to improve cost and reliability.</li>
+                <li>Built CI/CD pipelines and automated tests for faster, more reliable releases.</li>
                 <li>Standardized SDLC with secure API design and .NET best practices.</li>
             </ul>
         </div>
@@ -89,10 +80,10 @@
             </div>
             <p class="text-sm text-gray-700">Team Lead / Architect</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Led 8-member team delivering cloud-based mobile and API solutions.</li>
-                <li>Designed AWS microservices with Terraform and advanced CI/CD.</li>
-                <li>Reduced costs by leveraging AWS Cognito for identity management.</li>
-                <li>Mentored developers to boost team output and quality.</li>
+                <li>Directed 8-member engineering team delivering mobile and API solutions.</li>
+                <li>Designed AWS microservices with Terraform and advanced CI/CD pipelines.</li>
+                <li>Reduced costs by implementing AWS Cognito for identity management.</li>
+                <li>Mentored engineers to raise team performance and code quality.</li>
             </ul>
         </div>
 
@@ -104,9 +95,9 @@
             </div>
             <p class="text-sm text-gray-700">Senior Software Engineer</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Developed high-volume financial microservices for internal and external transfers.</li>
-                <li>Created CI/CD pipelines for AWS and Azure to streamline releases.</li>
-                <li>Produced architecture diagrams for faster onboarding and clarity.</li>
+                <li>Developed financial microservices handling millions of transactions monthly.</li>
+                <li>Created CI/CD pipelines for AWS and Azure to streamline deployments.</li>
+                <li>Produced architecture diagrams to speed team onboarding and clarity.</li>
             </ul>
         </div>
     </section>
