update to include release notes pipeline

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                 <span class="font-bold">Codefi</span>
                 <span class="italic">June 2025 – Present</span>
             </div>
-            <p class="text-sm text-gray-700">Senior Full Stack AI Engineer</p>
+            <p class="text-sm text-gray-700">Senior Full Stack Engineer</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Built AI-driven push-button release notes mechanism that forces deliberate proofreading before release to shrink developer release time from 1 hour to 5 minutes.</li>
                 <li>Built <strong>Traction Studio AI</strong>, a multi-agent platform that cut business model prep time from 120 days to 2 weeks, adopted by 21 companies.</li>
                 <li>Developed custom <strong>LLM fine-tuning</strong> and <strong>RAG pipelines</strong> with vector search to deliver context-aware guidance.</li>
                 <li>Reduced abandoned startup ideas by <strong>33%</strong> through AI-driven business planning workflows.</li>
