update resume to include missing history and update verbiage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="mb-6">
         <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Summary</h2>
         <p class="mt-2 text-sm leading-relaxed">
-            Full-stack engineer with deep expertise in <strong>AI-driven platforms</strong>, <strong>LLM fine-tuning</strong>, and <strong>retrieval-augmented generation (RAG)</strong>. Proven record of delivering production AI systems that improve developer productivity by <strong>100%</strong> and cut business preparation time by <strong>80%+</strong>. Strong leader and mentor focused on privacy, compliance, and secure, scalable <strong>AWS</strong> and <strong>Azure</strong> architectures. Passionate about building impactful products with measurable business outcomes.
+            Full-stack engineer with 10+ years of C#/.NET expertise, specializing in enterprise-scale system architecture, TDD-driven legacy modernization, and compliance-focused delivery. Proven track record of leading engineering teams, owning architectural direction, and delivering high-volume, transaction-critical systems across healthcare, financial, and operational industries. Experience building AI-driven platforms and integrating modern tooling to improve developer productivity and business outcomes. Strong focus on scalability, data integrity, and secure AWS/Azure infrastructure.
         </p>
     </section>
 
@@ -39,13 +39,14 @@
             </div>
             <p class="text-sm text-gray-700">Senior Full Stack Engineer</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Built AI-driven push-button release notes mechanism that forces deliberate proofreading before release to shrink developer release time from 1 hour to 5 minutes.</li>
-                <li>Built <strong>Traction Studio AI</strong>, a multi-agent platform that cut business model prep time from 120 days to 2 weeks, adopted by 21 companies.</li>
-                <li>Developed custom <strong>LLM fine-tuning</strong> and <strong>RAG pipelines</strong> with vector search to deliver context-aware guidance.</li>
-                <li>Reduced abandoned startup ideas by <strong>33%</strong> through AI-driven business planning workflows.</li>
-                <li>Integrated Claude and GitHub Copilot to automate engineering tasks, doubling developer throughput.</li>
-                <li>Mentored 2 junior engineers, leading a greenfield product to beta launch in 7 weeks.</li>
-                <li>Implemented secure, compliant AWS infrastructure to protect sensitive data and IP.</li>
+                <li>Built Traction Studio AI, a multi-agent platform that reduced business model preparation time from 120 days to 2 weeks, adopted by 21 companies and reducing abandoned startup ideas by 33%</li>
+                <li>Developed custom LLM fine-tuning and RAG pipelines with vector search to deliver context-aware AI-driven guidance</li>
+                <li>Built an AI-driven release notes system that enforces deliberate review before deployment, cutting developer release time from 1 hour to 5 minutes</li>
+                <li>Integrated Claude and GitHub Copilot into the engineering workflow, automating ~25% of development stories with developer oversight and doubling team throughput</li>
+                <li>Architected and maintained a Dockerized Ruby on Rails service deployed on AWS EC2 with Aurora PostgreSQL</li>
+                <li>Mentored 2 junior engineers and led a greenfield product from concept to beta launch in 7 weeks</li>
+                <li>Negotiated and established testing standards with business leadership, securing 100% UAT coverage and ~80% unit test coverage while balancing product velocity priorities</li>
+                <li>Implemented secure, compliant AWS infrastructure to protect sensitive business and IP data</li>
             </ul>
         </div>
 
@@ -59,17 +60,18 @@
 
             <p class="mt-2 text-xs font-semibold">Southwest Airlines – Scheduling System Overhaul</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Modernized nationwide scheduling for all flights and crew members.</li>
-                <li>Raised schedule adherence from <strong>70%</strong> to <strong>85%+</strong>, surpassing company targets.</li>
-                <li>Built AI-powered workflows using Amazon Q and Copilot to reduce downtime.</li>
-                <li>Designed a secure, scalable AWS architecture for sensitive operational data.</li>
+                <li>Rewrote Southwest's nationwide crew and flight scheduling system following a critical operational failure, directly restoring scheduling reliability across the airline</li>
+                <li>Raised schedule adherence from 70% to 85%+, surpassing company performance targets</li>
+                <li>Designed and maintained secure, scalable AWS infrastructure built around Kubernetes for sensitive operational and scheduling data</li>
+                <li>Worked within Southwest's regulatory and auditing framework, adhering to strict data governance and compliance standards throughout development</li>
             </ul>
 
             <p class="mt-2 text-xs font-semibold">CareMetx – Event-Driven Architecture</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Created AWS and Azure event-driven architecture to improve cost and reliability.</li>
-                <li>Built CI/CD pipelines and automated tests for faster, more reliable releases.</li>
-                <li>Standardized SDLC with secure API design and .NET best practices.</li>
+                <li>Built Kafka-driven event-driven microservices architecture for CareMetx's Benefit Verification workflow, improving cost efficiency and system reliability</li>
+                <li>Maintained HIPAA compliance throughout the design and delivery of healthcare data systems</li>
+                <li>Implemented CI/CD pipelines and automated testing to accelerate release cycles and reduce deployment risk</li>
+                <li>Standardized SDLC practices with secure API design and .NET best practices across the team</li>
             </ul>
         </div>
 
@@ -81,10 +83,11 @@
             </div>
             <p class="text-sm text-gray-700">Team Lead / Architect</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Directed 8-member engineering team delivering mobile and API solutions.</li>
-                <li>Designed AWS microservices with Terraform and advanced CI/CD pipelines.</li>
-                <li>Reduced costs by implementing AWS Cognito for identity management.</li>
-                <li>Mentored engineers to raise team performance and code quality.</li>
+                <li>Owned architectural direction across 4 engineering teams at 2 clients simultaneously, spanning C#/.NET backends and React/React Native frontends</li>
+                <li>Led a .NET 4.0 to .NET Core migration for a client, incrementally modernizing their environment without disrupting production systems</li>
+                <li>Established and enforced TDD standards across all teams, setting a minimum of 85% unit test coverage and 100% UAT coverage as baseline expectations</li>
+                <li>Directed 8-member engineering team delivering mobile and API solutions using AWS microservices, Terraform, and CI/CD pipelines</li>
+                <li>Mentored engineers on architectural best practices, code quality standards, and scalable .NET design patterns</li>
             </ul>
         </div>
 
@@ -96,9 +99,30 @@
             </div>
             <p class="text-sm text-gray-700">Senior Software Engineer</p>
             <ul class="list-disc list-inside mt-1 text-xs space-y-1">
-                <li>Developed financial microservices handling millions of transactions monthly.</li>
-                <li>Created CI/CD pipelines for AWS and Azure to streamline deployments.</li>
-                <li>Produced architecture diagrams to speed team onboarding and clarity.</li>
+                <li>Delivered enterprise C#/.NET solutions across multiple clients including financial, healthcare, and food service industries, with a focus on system integration and legacy modernization</li>
+                <li>Architected and maintained ACH payment processing system handling high-volume financial transactions for a major banking client</li>
+                <li>Specialized in extracting monolithic codebases into containerized microservices using Docker and Terraform, consistently delivering systems with 85%+ unit test coverage and 100% UAT coverage</li>
+                <li>Applied TDD-driven refactoring practices across client engagements to modernize legacy .NET codebases while maintaining system stability</li>
+                <li>Worked across PostgreSQL and SQL Server environments, designing data layers for high-volume, transaction-critical systems</li>
+                <li>Maintained HIPAA compliance across multiple healthcare clients including Ascension Health and Houston Methodist</li>
+                <li>Built and maintained a Kafka-driven event processing system for Little Caesars that handled offline transaction queuing and ordered event replay to ensure data consistency during outages</li>
+                <li>Participated in architectural decision-making and cross-team coordination to deliver integrated solutions on client timelines</li>
+            </ul>
+        </div>
+
+        <!-- CACI -->
+        <div class="mt-5">
+            <div class="flex justify-between text-sm">
+                <span class="font-bold">CACI </span>
+                <span class="italic">July 2011 – July 2015</span>
+            </div>
+            <p class="text-sm text-gray-700">Software Engineer</p>
+            <ul class="list-disc list-inside mt-1 text-xs space-y-1">
+                <li>Maintained and supported legacy national intelligence systems for the Defense Intelligence Agency (DIA)</li>
+                <li>Developed and maintained .NET Web API backends integrated with AngularJS frontends within a highly classified environment</li>
+                <li>Learned and developed in CACI's proprietary programming language from scratch using documentation and independent research, demonstrating strong self-directed learning ability</li>
+                <li>Held active TS-SCI security clearance throughout tenure</li>
+                <li>Worked within strict government security and compliance frameworks supporting critical intelligence infrastructure</li>
             </ul>
         </div>
     </section>
