--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="mb-6">
         <h2 class="text-lg font-semibold border-b border-gray-300 pb-1">Summary</h2>
         <p class="mt-2 text-sm leading-relaxed">
-            Full-stack engineer with 10+ years of C#/.NET expertise, specializing in enterprise-scale system architecture, TDD-driven legacy modernization, and compliance-focused delivery. Proven track record of leading engineering teams, owning architectural direction, and delivering high-volume, transaction-critical systems across healthcare, financial, and operational industries. Experience building AI-driven platforms and integrating modern tooling to improve developer productivity and business outcomes. Strong focus on scalability, data integrity, and secure AWS/Azure infrastructure.
+            Full-stack engineer with 10+ years of C#/.NET expertise across government, financial, healthcare, and enterprise industries. Proven track record of owning architectural direction, leading engineering teams, and delivering high-volume, transaction-critical systems with a focus on TDD-driven legacy modernization and compliance. Early career experience as a TS-SCI cleared government contractor supporting national intelligence systems established a foundation in security-first engineering and working within strict regulatory frameworks. Strong experience building AI-driven platforms and integrating modern tooling to improve developer productivity and business outcomes. Focused on scalability, data integrity, and secure AWS/Azure infrastructure.
         </p>
     </section>
 
@@ -113,7 +113,7 @@
         <!-- CACI -->
         <div class="mt-5">
             <div class="flex justify-between text-sm">
-                <span class="font-bold">CACI </span>
+                <span class="font-bold">CACI</span>
                 <span class="italic">July 2011 – July 2015</span>
             </div>
             <p class="text-sm text-gray-700">Software Engineer</p>
